Fix alignment with input box on safari

--- a/geminiportal/static/site.css
+++ b/geminiportal/static/site.css
@@ -201,7 +201,7 @@ details summary {
 }
 .gopher td.query-form > form {
     display: inline-flex;
-    align-items: baseline;
+    align-items: center;
 }
 .gopher td.query-form > form > * {
     margin-right: 5px;
